# printnanny-sdwire

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: vcpkg-build.yml
board/: .gitignore  SDWire.kicad_pcb  SDWire.kicad_pro  SDWire.kicad_sch  fp-lib-table  sym-lib-table
board/3dmodels/Connector_Card.3dshapes/: Molex-104031-0811.step
board/exports/SDWire-v1.4-r1/: README.txt  SDWire-BOM.v1.4-r1.csv  SDWire-v1.4-r1-NPTH-drl_map.gbr  SDWire-v1.4-r1-NPTH.XLN  SDWire-v1.4-r1-PTH-drl_map.gbr  SDWire-v1.4-r1-PTH.XLN  SDWire-v1.4-r1.G2L  SDWire-v1.4-r1.G3L  SDWire-v1.4-r1.GBL  SDWire-v1.4-r1.GBO  SDWire-v1.4-r1.GBP  SDWire-v1.4-r1.GBS  SDWire-v1.4-r1.GKO  SDWire-v1.4-r1.GTL  SDWire-v1.4-r1.GTO  SDWire-v1.4-r1.GTP  SDWire-v1.4-r1.GTS
board/footprints/PrintNanny.pretty/: print_nanny.kicad_mod
src/: .gitignore  Makefile  main.cpp
